Fix missing margin auto for horizontal centering

--- a/src/index.scss
+++ b/src/index.scss
@@ -31,7 +31,8 @@ $uhsse: #e8f3eb;
 
 body {
 	max-width: 800px;
-	padding: 10% 1em 5%;
+	margin: 0 auto;
+	padding: 7.5% 1em 5%;
 	background-color: $gray;
 
 	quotes: "“" "”" "‘" "’";
